# betterncm-native-plugin-rs

./: .build.bat  .gitmodules  Cargo.toml  README.md
.cargo/: config.toml
betterncm-js-framework/: index.d.ts  package.json
betterncm-js-framework/src/: loader.ts  plugin.ts
betterncm-js-framework/src/betterncm-api/: app.ts  base.ts  fs.ts  index.ts
betterncm-js-framework/src/plugin-manager/: index.tsx
betterncm-js-framework/src/plugin-manager/components/: header.tsx  safe-mode-info.tsx
betterncm-js-framework/src/types/: index.d.ts
betterncm-loader/: Cargo.toml
betterncm-loader/examples/: debug.rs
betterncm-loader/resources/: framework.css  framework.css.map  framework.js  framework.js.map  splash-screen.html  splash-screen.min.html
betterncm-loader/src/: audio.rs  cef_hooks.rs  exception.rs  lib.rs  plugin_native_apis.rs  plugins.rs  proxy_functions.rs  scheme_hijack.rs  utils.rs
betterncm-loader/src/api/: app.rs  audio.rs  fs.rs  internal.rs  mod.rs  native_plugin.rs  util.rs
betterncm-loader/src/http_api/: mod.rs
betterncm-macro/: Cargo.toml
betterncm-macro/src/: lib.rs  native_api.rs  native_call.rs  native_main.rs
betterncm-plugin-api/: Cargo.toml
betterncm-plugin-api-sys/: Cargo.toml  build.rs
betterncm-plugin-api-sys/src/: lib.rs
betterncm-plugin-api/src/: lib.rs
betterncm-plugin-example/: Cargo.toml
betterncm-plugin-example/src/: lib.rs
cef/: Cargo.toml
cef-sys/: Cargo.toml  build.rs
cef-sys/src/: bindings_i686_pc_windows_msvc.rs  bindings_x86_64_pc_windows_msvc.rs  lib.rs
cef/src/: cef_base_ref_counted.rs  cef_string.rs  cef_v8context.rs  cef_v8function.rs  cef_v8value.rs  cef_value.rs  lib.rs  task.rs
