[workspace]
members = [
    "betterncm-macro",
    "betterncm-plugin-example",
    "betterncm-plugin-api",
    "betterncm-plugin-api-sys",
    "cef-sys",
    "cef",
]

[profile.dev]
opt-level = "s"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = "s"
debug = false
strip = true
