[package]
name = "betterncm-loader"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
betterncm-macro = { path = "../betterncm-macro" }
cef = { path = "../cef" }
cef-sys = { path = "../cef-sys" }

anyhow = { version = "1.0", features = ["backtrace"] }
ilhook = "^1.4"
path-absolutize = "3"
dirs = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7"
notify = "5.1.0"
url-escape = "0.1.1"
zip = "0.6.3"
once_cell = "1.17"
nipper = "0.1.9"
detour = { version = "0.8", default-features = false }
rayon = "1.6"
ansi_term = "0.12"
tracing = "0.1"
tracing-subscriber = "0.3"
raw-window-handle = "*"
window-shadows = "*"
windows = { version = "*", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_SystemServices",
    "Win32_System_SystemInformation",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_Debug",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Dwm",
    "Win32_System_Kernel",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_System_Threading",
] }
windows-sys = { version = "*", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_SystemServices",
    "Win32_System_SystemInformation",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_Debug",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Dwm",
    "Win32_System_Kernel",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_System_Threading",
] }

[dev-dependencies]
winreg = "0.10"
